--- a/index.css
+++ b/index.css
@@ -1,1 +1,19 @@
-
+.cell {
+  width: 10px;
+  height: 10pc;
+  background-color: gray;
+}
+table {
+  border-collapse: collapse;
+}
+.row {
+  float: left;
+  padding: 2px;
+  display: block;
+}
+.row td {
+  font-size: 15px;
+  width: 20px;
+  height: 15px;
+  display: block;
+}
