--- a/index.css
+++ b/index.css
@@ -1,19 +1,58 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+}
 .cell {
-  width: 10px;
-  height: 10pc;
-  background-color: gray;
+  width: 11px;
+  height: 11px;
+  margin: 1px;
+  border-radius: 3px;
+  display: block;
+  background-color: #ebedf0;
 }
 table {
   border-collapse: collapse;
 }
 .row {
+  min-width: 10px;
+  width: 10px;
   float: left;
   padding: 2px;
   display: block;
 }
-.row td {
-  font-size: 15px;
-  width: 20px;
-  height: 15px;
-  display: block;
+.active_cell {
+  background-color: green;
+}
+.headerCell {
+  /* width: 11px; */
+  height: 18px;
+}
+.colorPickerWrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+.colorOption {
+  margin: 5px;
+  width: 11px;
+  height: 11px;
+  border-radius: 3px;
+}
+#col1 {
+  background-color: #ebedf0;
+}
+#col2 {
+  background-color: #9be9a8;
+}
+#col3 {
+  background-color: #40c463;
+}
+#col4 {
+  background-color: #30a14e;
+}
+#col5 {
+  background-color: #216e39;
 }
