--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ main {
   border-radius: 3px;
   display: block;
   background-color: #ebedf0;
+  cursor: pointer;
 }
 table {
   border-collapse: collapse;
@@ -40,6 +41,7 @@ table {
   width: 11px;
   height: 11px;
   border-radius: 3px;
+  cursor: pointer;
 }
 #col1 {
   background-color: #ebedf0;
@@ -55,4 +57,7 @@ table {
 }
 #col5 {
   background-color: #216e39;
+}
+.selected {
+  border: 1px solid #0000;
 }
