--- a/index.css
+++ b/index.css
@@ -1,10 +1,29 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 main {
   display: flex;
   flex-direction: column;
   width: fit-content;
+  margin: 2em auto;
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.siteInfoWrapper {
+  display: flex;
+  flex-direction: column;
+}
+.externalLink {
+  text-decoration: none;
+  color: gray;
+}
+.externalLink:hover {
+  text-decoration: underline;
+  color: lightgray;
 }
 .cell {
   width: 11px;
@@ -29,8 +48,7 @@ table {
   background-color: green;
 }
 .headerCell {
-  /* width: 11px; */
-  height: 18px;
+  height: 23px;
 }
 .colorPickerWrapper {
   display: flex;
